deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiap58-ingress
spec:
  ingressClassName: nginx #This is how we target the nginx ingress controller.
  rules:
    - http:
        paths:
        # pedidos
        ##########################
          - path: /categoria
            pathType: Prefix
            backend:
              service:
                name: app-pedido
                port:
                  number: 8080
                  #name: chespirito
          - path: /cliente
            pathType: Prefix
            backend:
              service:
                name: app-pedido
                port:
                  number: 8080
          - path: /adm
            pathType: Prefix
            backend:
              service:
                name: app-pedido
                port:
                  number: 8080
          - path: /pedidos
            pathType: Prefix
            backend:
              service:
                name: app-pedido
                port:
                  number: 8080
          - path: /produto
            pathType: Prefix
            backend:
              service:
                name: app-pedido
                port:
                  number: 8080
          # pagamento
          ##################################
          - path: /gerenciamento-pagamento
            pathType: Prefix
            backend:
              service:
                name: app-pagamentos
                port:
                  number: 8080
          # webhook
          ##################################
          - path: /whorder
            pathType: Prefix
            backend:
              service:
                name: webhook-pagamento
                port:
                  number: 5000
          - path: /whpay
            pathType: Prefix
            backend:
              service:
                name: webhook-pagamento
                port:
                  number: 5000
          - path: /heath-check
            pathType: Prefix
            backend:
              service:
                name: webhook-pagamento
                port:
                  number: 5000
